--- a/Group Project/STYLES/main.css
+++ b/Group Project/STYLES/main.css
@@ -7,7 +7,7 @@ html, body {
     width: 100%;
     height: 100%;
     background-size: cover;
-    background-image: url(../PHOTO/background.jpg);
+    /* background-image: url(../PHOTO/background.jpg); */
     font-family: sans-serif;
     font-weight: 600;
 }
@@ -26,51 +26,6 @@ html, body {
     height: 8vh;  
     background-color: rgb(88, 141, 255); 
     z-index: 1000;  
-}
-@keyframes changeBackground {
-    0% {
-        background-image: url('../PHOTO/catering.jpg');
-    }
-    33% {
-        background-image: url('../PHOTO/catering2.jpeg');
-    }
-    66% {
-        background-image: url('../PHOTO/catering3.jpg');
-    }
-    100% {
-        background-image: url('../PHOTO/catering.jpg'); /* Loop back to the first image */
-    }
-}
-#signIn{
-    position: fixed;
-    right: 0;
-    margin-right: 1rem;
-}
-
-#home{
-    position:fixed;
-    left:0;
-    margin-left:1rem;
-}
-
-
-#contactButton{
-    background-color:rgb(88, 141, 255) ;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top:10px;
-    padding-bottom: 10px;;
-    border-width: 2px;
-    border-radius:4px;
-    font-weight: 600;
-    font-size: 20px;
-    margin-top: 17rem;
-}
-
-#contactButton:hover{
-    color:rgb(88, 141, 255) ;
-    background-color: white;
-    border: 4px solid rgb(88, 141, 255);
 }
 .navBarOptions{
     display: flex;
@@ -95,18 +50,66 @@ html, body {
     transition: 0.5s;
     letter-spacing: 0.10em;
 }
+
+
+@keyframes changeBackground {
+    0% {
+        background-image: url('../PHOTO/catering.jpg');
+    }
+    33% {
+        background-image: url('../PHOTO/catering2.jpeg');
+    }
+    66% {
+        background-image: url('../PHOTO/catering3.jpg');
+    }
+    100% {
+        background-image: url('../PHOTO/catering.jpg'); /* Loop back to the first image */
+    }
+}
+#manager{
+    position: fixed;
+    right: 0;
+    margin-right: 1rem;
+}
+
+#home{
+    position:fixed;
+    left:0;
+    margin-left:1rem;
+}
+
+
+/* #contactButton{
+    background-color:rgb(88, 141, 255) ;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top:10px;
+    padding-bottom: 10px;;
+    border-width: 2px;
+    border-radius:4px;
+    font-weight: 600;
+    font-size: 20px;
+    margin-top: 17rem;
+} */
+
+/* #contactButton:hover{
+    color:rgb(88, 141, 255) ;
+    background-color: white;
+    border: 4px solid rgb(88, 141, 255);
+} */
+
 .menu {
     display: flex;
-    flex-direction: row;
+    overflow: hidden;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: left;
     width: 100vw;
-    height: 40vh;
+    height: 80vh;
     position: relative;
     color: rgb(255, 255, 255);
     font-style: normal;
     z-index: 2;
-    overflow: hidden;
     box-sizing: border-box;
 }
 
@@ -116,183 +119,63 @@ html, body {
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
+    height: 80vh;
     background-size: cover;
     background-position: center;
     z-index: -1;
-    filter: blur(4px);
-    animation: changeBackground 10s infinite;
+    background-color: rgba(0, 0, 0, 0.9);
+    filter: blur(8px);
+    animation: changeBackground 20s infinite;
 }
 
-
-#ttc {
-    background-color: rgb(255, 255, 255);
-    color: black;
-    padding: 25px;
-    font-family: sans-serif;
+#slogan2{
+    text-align: left;
+    padding-left:5vw;
+    margin-top:5px;
     font-weight: 600;
-    border: 4px solid black;
-    
+    font-size: 22px;
+}
+#slogan{
+    text-align: left;
+    padding-left:5vw;
+    margin-bottom:0;
+    font-size: 45px;
 }
 
-.advertise{
-    margin-top: 5rem;
-    color: rgb(0, 0, 0);
-    background-color: white;
-    width: 30vw;
-    height: 40vh;
-}
-#aboutUs{
-    margin-top: 10rem;
+
+
+.reservationOptions-container{
     display: flex;
-    width: 15vw;
-    margin-left: auto;
-    margin-right: auto;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-    position: relative;
-    border: 4px solid rgb(88, 141, 255);
-    z-index: 1;
-    padding: 10px 35px;
-  
+    width:100%;
+    height:100vh;
+
 }
 
-.catering{
+#wedding{
     display: flex;
-    background-color: rgb(88, 141, 255);
-    padding: 0 4rem;
-    margin-left:auto;
-    margin-right:auto;
-    justify-content: center;
-    align-items: center;
-    width: 85vw;
-    border-radius:24px;
-}
-
-#cateringOptions{
-    margin-top: 5rem;
-    margin-bottom: 3rem;
-    display: flex;
-    width: 20vw;
-    margin-left: auto;
-    margin-right: auto;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-    position: relative;
-    border: 4px solid rgb(88, 141, 255);
-    padding: 10px 35px;
-}
-
-.cateringOptions{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top:2rem;
-}
-
-.wedding{
-    margin-bottom: 1rem;
-    width: 85vw;
-    height: 60vh;
-    background-color: rgb(255, 255, 255);
-    border-radius: 24px;
-}
-
-.bDay{
-    margin-bottom: 1rem;
-    width: 85vw;
-    height: 60vh;
-    background-color: rgb(255, 255, 255);
-    border-radius: 24px;
-}
-
-.custom{
-    margin-bottom: 1rem;
-    width: 85vw;
-    height: 60vh;
-    background-color: rgb(255, 255, 255);
-    border-radius: 24px;
-}
-
-.container-aboutUs{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: aliceblue;
-}
-
-.ORIGINS{
-    background-color: rgb(88, 141, 255);
+    max-width: 45%;
+    background-color: rgb(88, 141, 255) ;
     color: white;
-    width: 40vw;
-    height: 30vh;
-    margin-top: 3rem;
-    border-top-left-radius: 16px;
-    border-bottom-left-radius: 16px;
+    padding: 0 0 0 40px;
+    font-size: 40px;
+    border-radius: 8px;
+    margin-top: 30px;
 }
-.GOAL{
-    background-color: white;
-    color: black;
-    width: 40vw;
-    height: 30vh;
-    margin-top: 3rem;
-    border-top-right-radius: 16px;
-    border-bottom-right-radius: 16px;
-
-}
+ 
 
 
 
-.contactMenu {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    border: 4px solid rgb(88, 141, 255);
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    margin-top:10rem;
 
-    /* Set fixed width and height */
-    width: 40%;   
-    height: 45vh;
 
-    margin-left: auto;
-    margin-right: auto;
-}
 
-.contactInfo {
-    display: flex;
-    flex-direction: row; 
-    justify-content: center; 
-    align-items: center; 
-    background-color: rgb(255, 255, 255); 
-    margin-bottom: 10px; 
-    font-family:sans-serif;
-    font-weight: 900;
-}
 
-.contactInfo label {
-    width: 10rem;
-}
 
-.contactInfo input {
-    height: 1.5rem;
-    width: 12rem;
-    
-}
+
 
 #description{
     height: 4rem;
 }
-#send{
+.send{
     background-color: black;
     color: white;
     padding-left: 20px;
@@ -302,9 +185,10 @@ html, body {
     font-weight: 600;
     font-size: 15px;
     margin-top: 1rem;
+    border:3px solid black;
 }
 
-#send:hover{
+.send:hover{
     background-color: white;
     color: black;
     opacity: 0.8;
@@ -312,3 +196,5 @@ html, body {
     letter-spacing: 0.10em;
     border:3px solid black;
 }
+
+
